fix svg overflow

--- a/src/features/CupboardShelfList/ui/ShelfButtons/ShelfButtons.module.scss
+++ b/src/features/CupboardShelfList/ui/ShelfButtons/ShelfButtons.module.scss
@@ -15,6 +15,10 @@
   justify-content: center;
 }
 
+.addCardButton > svg {
+  overflow: visible;
+}
+
 .ShelfButtonsIcons {
   gap: 14px;
 
